welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
DwarfCode:2: error: value =! is not a member of java.awt.Color
while(getCouleurSol()=!Color.green){
                     ^